# cybersecurityassessment

./: .replit  README.md  main.py  pyproject.toml  replit.md  test_endpoints.py  test_services.py
app/: __init__.py  models.py  routes.py
attached_assets/: Application to edit _page-0008_1763564763242.pptx  Pasted-2025-11-20-15-41-26-19-c746f06c-System-crash-loop-detected-2025-11-20-17-11-26-96-52721471-User-Erro-1763645492554_1763645492555.txt  Pasted-Now-check-this-html-file-and-fix-if-their-any-problem-DOCTYPE-html-html-lang-en-head--1763639116290_1763639116291.txt  local-storage.json
static/css/: prop_firm.css  style.css
static/js/: particles.js  prop_firm.js
templates/: about.html  chat.html  home.html  home_old.html  index.html  layout.html  login.html  prop_firm.html  signup.html
tests/: conftest.py  test_api.py  test_auth.py  test_models.py  test_routes.py
